Bug 396676 - Spelling error in binary
Summary: Spelling error in binary
Status: RESOLVED FIXED
Alias: None
Product: lattedock
Classification: Unmaintained
Component: application (other bugs)
Version First Reported In: git (master)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Michail Vourlakos
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-07-19 19:49 UTC by Scarlett Moore
Modified: 2018-08-02 15:40 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Patch to fix a spelling error (480 bytes, patch)
2018-07-19 19:49 UTC, Scarlett Moore
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Scarlett Moore 2018-07-19 19:49:52 UTC
Created attachment 114016 [details]
Patch to fix a spelling error

Missing apostrophe in doesn't.
Comment 1 Michail Vourlakos 2018-07-19 20:27:53 UTC
No problem accepting it in master but can you please submit it through https://phabricator.kde.org with arcanist tool ?
Comment 2 Michail Vourlakos 2018-08-02 15:40:54 UTC
Git commit 84de238181846a030cbdee46de401992b937a487 by Michail Vourlakos.
Committed on 02/08/2018 at 15:39.
Pushed by mvourlakos into branch 'master'.

missing apostrophe

M  +1    -1    app/main.cpp

https://commits.kde.org/latte-dock/84de238181846a030cbdee46de401992b937a487