missing apostrophe

BUG: 396676